assets/css/main.css
/* ... */
body.inverted > header h1 a,
body.inverted > header h1 a:active,
body.inverted > header h1 a:visited,
body.inverted > header h1 a:focus
{
    color: Window;
}
/*.item header h1*/
/*{*/
    /*display: block;*/
/*}*/
.item h1,
.item h2,
.item h3,
.item h4,
.item h5,
.item h6 {
    /*font-weight: normal;*/
    /*margin: 0.2em 0;*/
}
.item h1 {
    font-size: 1.4em;
}
.item h2 {
    font-size: 1.2em;
}
.item h3 {
    font-size: 1.12em;
}
.item h4 {
    font-size: 1.04em;
}
.item h5 {
    font-size: 1em;
}
.item h6 {
    font-size: .94em;
}
.item h1 a {
    /*padding-left: 0.3em;*/
}
ol.hide-text article.data {
    display: none;
}
.hide-text li.item {
    min-height: 3.3rem;
}
article {
    min-height: 2.0rem;
    /*padding-bottom: 1.2rem;*/
    line-height: 1.6rem;
}
.hide-text article header {
    margin-bottom: 0px;
}
/*.hide-text .score {*/
    /*height: 3.4rem;*/
/*}*/
article > section {
    width: 100%;
}
article > header {
    max-height: 2rem;
    margin-bottom: .4em;
}
article > header h1 {
    display: inline;
}
h6.domain {
    font-weight: 200;
    font-size: .8em;
    /*margin-left: 5ex;*/
}
.domain:before {
    content: "( ";
}
.domain:after {
    content: " )";
}
.domain a:after {
    margin-right: .15em;
    content: "//";
    font-weight: 800;
    font-size: .78em;
}
.domain a {
    text-decoration: none;
}
.data p {}
.data pre {
    color: unset;
    line-height: 2rem;
}
.data code {
    white-space: pre;
    color: unset;
}
.data p:first-of-type {
    margin-top: 0;
}
.items article pre code {}
.inverted .items article pre {}
.inverted .items article pre code {}
ol {
    list-style: none;
    padding-left: 0;
}
ol li {
    margin-bottom: 1.2rem;
}
.item {
    display: grid;
    grid-template-columns: 2.4rem 11fr;
    grid-template-rows: minmax(0px, 11fr);
    grid-template-areas:
            "sidebar main"
            "sidebar footer"
}
.item aside.score {
    grid-area: sidebar;
}
/*.item header {*/
    /*grid-area: header;*/
/*}*/
.item .data {
    grid-area: main;
}
.item footer::before {
    content: '\2012';
}
.item footer {
    grid-area: footer;
}
ol.comments {
    padding: 1.5vmin 0 0 1.5vmin;
    border-radius: 0 0 0 .4rem;
}
ol.comments.lvl-0 {
    border-radius: .4rem 0 0 .4rem;
}
ol.comments li {
    list-style: none;
}
.acct .score:before {
    content: "[";
}
.acct .score:after {
    content: "]";
}
.item .score {
    /*display: none !important;*/
    text-align: center;
    max-width: 2em;
    padding: 0;
    margin-left: -2px;
}
.item .score a,
.item .score data {
    display: block;
    margin: auto;
}
.item .score data {
    font-size:.6em;
    /*line-height: 1.8rem;*/
    margin: 5px auto 3px auto;
}
.score a:hover,
.score a:focus {
    text-decoration: none;
}
.score a {
    text-decoration: none;
    font-size: 1.1em;
    color: WindowText;
}
.inverted #top-invert::before {
    /*content: "\f0eb";*/
    /*content: "\f042";*/
    content: "\f185";
    font-family: "Awesome";
    font-weight: 800;
}
#top-invert::before {
    /*content: "\f0eb";*/
    /*font-weight: 800;*/
    /*content: "\f042";*/
    content: "\f186";
    font-weight: 800;
    font-family: "Awesome";
}
.score a:not([href]) {
    opacity: .4;
}
.score a.yay {
    margin-top: 2px;
}
.score a.yay::before {
    font-family: "Awesome";
    content: "\f067";
    font-weight: 800;
}
.score a.yay:active,
.score a.yay.ed {
    color: deeppink;
}
.inverted .score a.yay:active,
.inverted .score a.yay.ed {
}
.score a.nay::after {
    font-family: "Awesome";
    content: "\f068";
    font-weight: 800;
}
.score a.nay:active,
.score a.nay.ed {
    color: #689a1c;
}

.inverted .score a.nay:active,
.inverted .score a.nay.ed {
   color: greenyellow;
}
.meta {
    clear:both;
    font-size: .8em;
    opacity: .6;
}
/*.meta:hover,*/
/*.meta:active {*/
    /*opacity: 1;*/
/*}*/
.meta a {
    text-decoration: none;
    font-weight: 900;
}
.by:before {
    content: "~";
    font-weight: 900;
}
.meta time {
    text-decoration: underline dotted;
}
.submission {
    padding: .2em 0 0 1.9em;
}
.comment {
    font-size: .96rem;
}
.deleted {
    line-height: 2rem;
    padding-left: 2ex;
    letter-spacing: 0.3ex;
    font-weight: 200;
}
.domains {
    font-size: 0.9em;
    font-weight: 200;
}
#content .meta {
    padding: 0 0 0 5ex;
}
details {}
details > summary::before {
    content: '+ ';
    font-size: 1rem;
}
details > summary {
    list-style: none;
    font-size: 0.7rem;
    display: inline;
    margin-top: 1rem;
    padding: .3rem 0 0 .3rem;
    border-radius: .4rem 0 0 0;
}
details > summary::-webkit-details-marker {
    display: none;
}
.comments, summary {
    border-left: 1px solid;
}
.lvl-9 {
    border-color: #ebebebaa;
}
.lvl-8 {
    border-color: #d7d7d7aa;
}
.lvl-7 {
    border-color: #c4c4c4aa;
}
.lvl-6 {
    border-color: #b0b0b0aa;
}
.lvl-5 {
    border-color: #9c9c9caa;
}
.lvl-4 {
    border-color: #898989aa;
}
.lvl-3 {
    border-color: #757575aa;
}
.lvl-2 {
    border-color: #626262aa;
}
.lvl-1 {
    border-color: #4e4e4eaa;
}
.lvl-0 {
    border-color: #3a3a3aaa;
}
.data {
    /*margin-bottom: 15px;*/
}
.comments .data,
#content .data  {
    border: none;
}
.text-plain {
    white-space: pre;
    font-family: monospace;
    /*width: 80ex;*/
    overflow: auto;
    line-height: revert;
}
#reply {
    margin-top: 1em;
    clear: both;
}
#reply, #new, #login {
    max-width: 80ex;
}
#reply fieldset legend,
#new fieldset legend,
#login fieldset legent {
    padding: 0 2ex;
}
#reply textarea,
#new textarea {
    width: 100%;
}
#reply label,
#new label,
#login label {}
menu.meta-items {
    display: inline;
    margin: 0;
    text-align: center;
    padding-left: 1em;
}
menu.meta-items li,
menu#bottom li {
    display: inline;
    margin: 0;
}
menu.meta-items:before {
    content: " [";
    padding-right: .1em;
}
menu.meta-items:after {
    content: "]";
    padding-left: .1em;
}
menu.meta-items a::before {
    font-weight: 900;
    padding: 0 .2rem;
}
/* ... */

